# TD3-Collision-Avoidance

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
scripts/: evaluate.py  train.py
src/td3/: env.py  networks.py  replay_buffer.py  td3.py
